[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cold"
version = "0.1.0"
description = "Python package for the cold project."
authors = [{ name = "Cold Team" }]
requires-python = ">=3.9"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cold = { path = ".", editable = true }

[tool.pixi.tasks]
install_cold = "pip install -e ."

[tool.pixi.dependencies]
ipython = ">=9.6.0,<10"
numpy = ">=2.3.4,<3"
matplotlib = ">=3.10.7,<4"
ipykernel = ">=7.1.0,<8"
pip = ">=25.2,<26"
tifffile = ">=2025.10.16,<2026"
tiled = ">=0.2.0,<0.3"

[tool.hatch.build.targets.wheel]
packages = [".cold"]

[tool.hatch.build.targets.sdist]
include = [".cold"]
